--- a/webui/templates/htmx/faq.jinja2
+++ b/webui/templates/htmx/faq.jinja2
@@ -22,7 +22,7 @@
 
         <h4>What exactly is "c/s"?</h4>
         <p>If the
-            <span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>tooltip</span> can't satisfy you:
+            <span data-tippy-content='commitments per second, also known as "p/s" or "s/s"'>tooltip</span> can't satisfy you:
         </p>
         <p>
             When solving a coinbase puzzle, the prover is actually grinding KZG10 commitments (you can read more about KZG10
