--- a/webui/templates/htmx/index.jinja2
+++ b/webui/templates/htmx/index.jinja2
@@ -41,7 +41,7 @@
                 <div class="cell large-3 ticker-cell">
                     <div class="grid-y ticker-cell-content">
                         <div class="cell ticker-cell-title">Estimated network speed (15m)</div>
-                        <div class="cell auto ticker-cell-data">{{ network_speed | format_number | safe }}&nbsp;<span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>c/s</span></div>
+                        <div class="cell auto ticker-cell-data">{{ network_speed | format_number | safe }}&nbsp;<span data-tippy-content='commitments per second, also known as "p/s" or "s/s"'>c/s</span></div>
                     </div>
                 </div>
                 {% endif %}
