add active validator count

--- a/webui/templates/htmx/index.jinja2
+++ b/webui/templates/htmx/index.jinja2
@@ -40,11 +40,17 @@
                 {% if not "DEBUG_SKIP_COINBASE" | get_env %}
                 <div class="cell large-3 ticker-cell">
                     <div class="grid-y ticker-cell-content">
-                        <div class="cell ticker-cell-title">Estimated network speed (15m)</div>
+                        <div class="cell ticker-cell-title">Estimated proving capacity (15m)</div>
                         <div class="cell auto ticker-cell-data">{{ network_speed | format_number | safe }}&nbsp;<span data-tippy-content='commitments per second, also known as "p/s" or "s/s"'>c/s</span></div>
                     </div>
                 </div>
                 {% endif %}
+                <div class="cell large-3 ticker-cell">
+                    <div class="grid-y ticker-cell-content">
+                        <div class="cell ticker-cell-title">Active validators</div>
+                        <div class="cell auto ticker-cell-data">{{ validators }}</div>
+                    </div>
+                </div>
                 <div class="cell large-3 ticker-cell">
                     <div class="grid-y ticker-cell-content">
                         <div class="cell ticker-cell-title">Validator participation rate (1h)</div>
