change html titles

--- a/webui/templates/address.jinja2
+++ b/webui/templates/address.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Address {{ address_trunc }} - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Address {{ address_trunc }} - Aleoscan{% endblock %}
 
 {% from "macros.jinja2" import data_line, data_line_safe %}
 
