--- a/webui/templates/advanced.jinja2
+++ b/webui/templates/advanced.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}{{ type }} {{ id_trunc }} - Haruka's Aleo Explorer{% endblock %}
+{% block title %}{{ type }} {{ id_trunc }} - Aleoscan{% endblock %}
 
 {% from "macros.jinja2" import data_line, sub_data_line %}
 
