--- a/webui/templates/blocks.jinja2
+++ b/webui/templates/blocks.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Blocks - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Blocks - Aleoscan{% endblock %}
 
 {% from "macros.jinja2" import nav %}
 
