--- a/webui/templates/faq.jinja2
+++ b/webui/templates/faq.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}FAQ - Haruka's Aleo Explorer{% endblock %}
+{% block title %}FAQ - Aleoscan{% endblock %}
 
 {% block content %}
 
