--- a/webui/templates/nodes.jinja2
+++ b/webui/templates/nodes.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Nodes - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Nodes - Aleoscan{% endblock %}
 
 {% block content %}
 
