--- a/webui/templates/orphan.jinja2
+++ b/webui/templates/orphan.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Orphan blocks - {{ height }} - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Orphan blocks - {{ height }} - Aleoscan{% endblock %}
 
 {% block head %}
     <style>
