--- a/webui/templates/programs.jinja2
+++ b/webui/templates/programs.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Program Registry - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Program Registry - Aleoscan{% endblock %}
 
 {% block content %}
 
