--- a/webui/templates/search_result.jinja2
+++ b/webui/templates/search_result.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Search Result - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Search Result - Aleoscan{% endblock %}
 
 {% block content %}
 
