--- a/webui/templates/similar_programs.jinja2
+++ b/webui/templates/similar_programs.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Similar programs - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Similar programs - Aleoscan{% endblock %}
 
 {% block content %}
     
