--- a/webui/templates/testnet3_outdated.jinja2
+++ b/webui/templates/testnet3_outdated.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Privacy Policy - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Privacy Policy - Aleoscan{% endblock %}
 
 {% block head %}
     <style>
