--- a/webui/templates/transaction.jinja2
+++ b/webui/templates/transaction.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Transaction {{ tx_id_trunc }} - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Transaction {{ tx_id_trunc }} - Aleoscan{% endblock %}
 
 {% block content %}
 
