--- a/webui/templates/unconfirmed_transactions.jinja2
+++ b/webui/templates/unconfirmed_transactions.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Unconfirmed Transactions - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Unconfirmed Transactions - Aleoscan{% endblock %}
 
 {% from "macros.jinja2" import nav %}
 
