--- a/webui/templates/upload_source.jinja2
+++ b/webui/templates/upload_source.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Upload source - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Upload source - Aleoscan{% endblock %}
 
 {% block content %}
 
