--- a/webui/templates/400.jinja2
+++ b/webui/templates/400.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}400 - Haruka's Aleo Explorer{% endblock %}
+{% block title %}400 - Aleoscan{% endblock %}
 
 {% block content %}
 
