--- a/webui/templates/404.jinja2
+++ b/webui/templates/404.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}404 - Haruka's Aleo Explorer{% endblock %}
+{% block title %}404 - Aleoscan{% endblock %}
 
 {% block content %}
 
