--- a/webui/templates/500.jinja2
+++ b/webui/templates/500.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}500 - Haruka's Aleo Explorer{% endblock %}
+{% block title %}500 - Aleoscan{% endblock %}
 
 {% block content %}
 
