--- a/webui/templates/address_solution.jinja2
+++ b/webui/templates/address_solution.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Solutions from {{ address_trunc }} - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Solutions from {{ address_trunc }} - Aleoscan{% endblock %}
 
 {% block content %}
 
