--- a/webui/templates/block.jinja2
+++ b/webui/templates/block.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Block {{ block.header.metadata.height }} - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Block {{ block.header.metadata.height }} - Aleoscan{% endblock %}
 
 {% block content %}
 
