--- a/webui/templates/changelog.jinja2
+++ b/webui/templates/changelog.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Changelog - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Changelog - Aleoscan{% endblock %}
 
 {% block content %}
 
