--- a/webui/templates/feedback.jinja2
+++ b/webui/templates/feedback.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Feedback - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Feedback - Aleoscan{% endblock %}
 
 {% block content %}
 
