--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Haruka's Aleo Explorer{% endblock %}
+{% block title %}Aleoscan{% endblock %}
 
 {% block content %}
 
