--- a/webui/templates/program.jinja2
+++ b/webui/templates/program.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Program {{ program_id }} - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Program {{ program_id }} - Aleoscan{% endblock %}
 
 {% block content %}
 
