--- a/webui/templates/record.jinja2
+++ b/webui/templates/record.jinja2
@@ -3,7 +3,7 @@
 {# Maybe later... #}
 {% extends "base.jinja2" %}
 
-{% block title %}Record {{ commitment_trunc }} - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Record {{ commitment_trunc }} - Aleoscan{% endblock %}
 
 {% block content %}
 
