--- a/webui/templates/tools.jinja2
+++ b/webui/templates/tools.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Tools - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Tools - Aleoscan{% endblock %}
 
 {% block content %}
 
