--- a/webui/templates/transition.jinja2
+++ b/webui/templates/transition.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Transition {{ ts_id_trunc }} - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Transition {{ ts_id_trunc }} - Aleoscan{% endblock %}
 
 {% block content %}
 
