--- a/webui/templates/validators.jinja2
+++ b/webui/templates/validators.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Validators - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Validators - Aleoscan{% endblock %}
 
 {% block content %}
 
