--- a/webui/templates/htmx/changelog.jinja2
+++ b/webui/templates/htmx/changelog.jinja2
@@ -6,6 +6,7 @@
 
     <h5>2024-02-25</h5>
     <ul>
+        <li>Added validator list to block info</li>
         <li>Rebranded to Aleoscan</li>
         <li>Added basic Aleo Name Service domain search</li>
         <li>Start of changelog tracking</li>
