provide old name

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -23,7 +23,7 @@
             }
         }
     </script>
-    <meta name="description" content="Aleoscan - open source Aleo explorer. Explore the Aleo blockchain, find information about blocks, transactions, validators, programs and more.">
+    <meta name="description" content="Aleoscan - open source Aleo explorer. Explore the Aleo blockchain, find information about blocks, transactions, validators, programs and more. Formerly known as Haruka's Aleo Explorer.">
 
     <title>{% block title %}{% endblock %}</title>
 
