replace all old domain names

--- a/webui/templates/htmx/privacy.jinja2
+++ b/webui/templates/htmx/privacy.jinja2
@@ -53,7 +53,7 @@
         <p>
             This site uses a self-hosted Plausible Analytics instance. It's an open-source alternative to Google Analytics
             and collects simple metrics. The data is open as well, so you can see what I see:
-            <a href="https://p.hamp.app/explorer.hamp.app" target="_blank">Live data</a>
+            <a href="https://p.hamp.app/testnet3.aleoscan.io" target="_blank">Live data</a>
         </p>
 
         <p>
