--- a/webui/templates/htmx/changelog.jinja2
+++ b/webui/templates/htmx/changelog.jinja2
@@ -4,6 +4,12 @@
 <div class="content">
     <h3>Changelog</h3>
 
+    <h5>2024-03-02</h5>
+    <ul>
+        <li>Added proper error page for internal server error</li>
+        <li>Optimized performance of transaction and program list pages</li>
+    </ul>
+
     <h5>2024-02-25</h5>
     <ul>
         <li>Added validator list to block info</li>
