--- a/webui/static/base_style_v10.css
+++ b/webui/static/base_style_v10.css
@@ -3,7 +3,7 @@
     src: url('/static/opensans-bold.woff2') format('woff2');
     font-weight: bold;
     font-style: normal;
-
+    font-display: swap;
 }
 
 @font-face {
@@ -11,7 +11,7 @@
     src: url('/static/opensans-bolditalic.woff2') format('woff2');
     font-weight: bold;
     font-style: italic;
-
+    font-display: swap;
 }
 
 @font-face {
@@ -19,7 +19,7 @@
     src: url('/static/opensans-italic.woff2') format('woff2');
     font-weight: normal;
     font-style: italic;
-
+    font-display: swap;
 }
 
 @font-face {
@@ -27,7 +27,7 @@
     src: url('/static/opensans-regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
-
+    font-display: swap;
 }
 
 body {
@@ -153,6 +153,7 @@ input[type=number] {
 
 .number-separator {
     user-select: none;
+    -webkit-user-select: none;
 }
 
 input:not([type]) {
