--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -132,7 +132,8 @@
         {% if "CLOUDFLARE" | get_env %} Contains CloudFlare analytics.{% endif %}
         {% if "PLAUSIBLE" | get_env %} Contains self-hosted Plausible analytics. <a onclick="toggle_optout()"><span id="plausible-optout"></span></a>.{% endif %}
         <a href="/privacy">Privacy policy</a>.
-        <br>
+        <br><br>
+        <a href="https://twitter.com/Aleo_Scan" rel="noreferrer" target="_blank">Twitter (X)</a>
     </div>
 </div>
 </div>
