adjust seo and remove restrictions from robots.txt

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -9,13 +9,13 @@
         {
             "@context": "https://schema.org",
             "@type": "WebSite",
-            "name": "Aleoscan",
+            "name": "AleoScan",
             "author": {
                 "@type": "Person",
                 "name": "Haruka Ma"
             },
             "url": "https://testnet3.aleoscan.io/",
-            "description": "Aleoscan is an open-source Aleo explorer, providing information about the Aleo blockchain.",
+            "description": "Aleoscan is an open source Aleo explorer. Explore the Aleo blockchain, find information about blocks, transactions, validators, programs and more. Formerly known as Haruka's Aleo Explorer.",
             "potentialAction": {
                 "@type": "SearchAction",
                 "target": "https://testnet3.aleoscan.io/search?q={search_term_string}",
@@ -23,7 +23,6 @@
             }
         }
     </script>
-    <meta name="description" content="Aleoscan - open source Aleo explorer. Explore the Aleo blockchain, find information about blocks, transactions, validators, programs and more. Formerly known as Haruka's Aleo Explorer.">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
