slight update privacy policy

--- a/webui/templates/htmx/privacy.jinja2
+++ b/webui/templates/htmx/privacy.jinja2
@@ -57,7 +57,7 @@
         </p>
 
         <p>
-            To opt-out of Plausible Analytics, add domain <span class="mono">p.hamp.app</span> to your adblocker.
+            To opt-out of Plausible Analytics, please click the "Opt Out" link in the website footer.
         </p>
     {% endif %}
 
@@ -67,7 +67,7 @@
         </p>
     {% endif %}
 
-        <p>For more questions and suggestions about this privacy policy, please send emails to privacy@hamp.app .</p>
+        <p>For more questions and suggestions about this privacy policy, please send emails to privacy@aleoscan.io .</p>
 
     </div>
 
