--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -68,7 +68,7 @@
             <ul class="dropdown menu" data-dropdown-menu hx-boost="true" hx-target="#htmx-body" hx-swap="innerHTML show:no" hx-push-url="true">
                 <a href="/" style="padding: 0; margin: auto 0"><div class="title-logo"></div></a>
                 <div class="title-network-indicator-container">
-                    <span class="title-network-indicator-name">CanaryNet</span>
+                    <span class="title-network-indicator-name">Testnet Beta</span>
                 </div>
                 <li>
                     <a href="#">Blockchain</a>
